--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -1,5 +1,7 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-add_executable( regression
-    main.cpp
-)
+add_executable( tests main.cpp storage.cpp )
+
+target_link_libraries( tests gtest gtest_main )
+
+add_test( tests tests )
