--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tools/googletest"]
 	path = tools/googletest
 	url = https://github.com/google/googletest
+[submodule "3rdparty/SHAtwo"]
+	path = 3rdparty/SHAtwo
+	url = https://github.com/moschles/SHAtwo
