--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(BOOST_LINK ../boost_1_67_0/stage/lib)
 
 add_subdirectory(tools)
 enable_testing()
-include_directories( ./include ${BOOST_INC} ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} )
+include_directories( ./include ./3rdparty ${BOOST_INC} ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} )
 
+add_subdirectory(3rdparty)
 add_subdirectory(test)
