--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -1,7 +1,11 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-add_executable( tests main.cpp storage.cpp )
+add_executable( tests 
+    main.cpp
+    storage.cpp
+    virtual_volume.cpp 
+    )
 
-target_link_libraries( tests gtest gtest_main )
+target_link_libraries( tests SHAtwo gtest gtest_main )
 
 add_test( tests tests )
