--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -2,9 +2,10 @@
 
 add_executable( tests 
     main.cpp
-    storage.cpp
-    bloom.cpp
-    virtual_volume.cpp 
+    key.cpp
+    #storage.cpp
+    #bloom.cpp
+    #virtual_volume.cpp 
     )
 
 target_link_libraries( tests SHAtwo gtest gtest_main )
