--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -4,9 +4,9 @@ add_executable( tests
     main.cpp
     key.cpp
     node_locker.cpp
-    #storage.cpp
+    virtual_volume.cpp 
+    storage.cpp
     #bloom.cpp
-    #virtual_volume.cpp 
     )
 
 target_link_libraries( tests SHAtwo gtest gtest_main )
