--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ enable_testing()
 include_directories( ./include ./3rdparty ${BOOST_INC} ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} )
 
 add_subdirectory(3rdparty)
+add_subdirectory(src)
 add_subdirectory(test)
