--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -9,6 +9,6 @@ add_executable( tests
     #bloom.cpp
     )
 
-target_link_libraries( tests SHAtwo physical_level gtest gtest_main )
+target_link_libraries( tests SHAtwo gtest gtest_main )
 
 add_test( tests tests )
