insertion: 1st build

--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 
-add_executable( regression 
+add_executable( regression EXCLUDE_FROM_ALL
     main.cpp
     key.cpp
     node_locker.cpp
