important fixes of insertion

--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -6,12 +6,12 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 
 add_executable( regression EXCLUDE_FROM_ALL
     main.cpp
-    key.cpp
-    node_locker.cpp
-    virtual_volume.cpp 
-    storage.cpp
-    storage_file.cpp
-    bloom.cpp
+    #key.cpp
+    #node_locker.cpp
+    #virtual_volume.cpp 
+    #storage.cpp
+    #storage_file.cpp
+    #bloom.cpp
     b_tree.cpp
 )
 
