--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -13,7 +13,7 @@ add_executable( regression EXCLUDE_FROM_ALL
     #storage.cpp
     storage_file.cpp
     #bloom.cpp
-    #b_tree.cpp
+    b_tree.cpp
 )
 
 target_link_libraries( regression gtest gtest_main )
