--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -11,7 +11,7 @@ add_executable( regression EXCLUDE_FROM_ALL
     #node_locker.cpp
     #virtual_volume.cpp 
     #storage.cpp
-    storage_file.cpp
+    #storage_file.cpp
     #bloom.cpp
     b_tree.cpp
 )
