--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 
 add_executable( regression EXCLUDE_FROM_ALL
     main.cpp
-    #storage_file.cpp
-    #b_tree.cpp
+    #torage_file.cpp
+    ##b_tree.cpp
     #packed_value.cpp
     #bloom.cpp
     #key.cpp
