--- a/test/performance/CMakeLists.txt
+++ b/test/performance/CMakeLists.txt
@@ -7,6 +7,10 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 
 add_executable( performance EXCLUDE_FROM_ALL
     main.cpp
+    BTreePower_16.cpp
+    BTreePower_32.cpp
+    BTreePower_64.cpp
+    BTreePower_128.cpp
 )
 
 target_link_libraries( performance gtest gtest_main )
