--- a/test/performance/CMakeLists.txt
+++ b/test/performance/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4297")
 
 
 add_executable( performance EXCLUDE_FROM_ALL
