Fixing few minor issues

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,6 @@
 add_subdirectory( regression )
 add_subdirectory( performance )
 add_subdirectory( stress )
+
+add_custom_target( tests ALL )
+add_dependencies( tests regression performance stress )
