--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 add_executable( regression EXCLUDE_FROM_ALL
     main.cpp
     merged_string_view.cpp
+    path_iterator.cpp
 )
 
 target_link_libraries( regression gtest gtest_main )
