adding path_iterator UT's

--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -3,12 +3,16 @@
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 
-add_executable( regression EXCLUDE_FROM_ALL
+add_executable( regression
     main.cpp
-    merged_string_view.cpp
+    #merged_string_view.cpp
     path_iterator.cpp
 )
 
-target_link_libraries( regression gtest gtest_main )
+target_link_libraries(
+    regression 
+    #gtest
+    gtest_main
+)
 
 install( TARGETS regression DESTINATION . )
