adding Storage UT's

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_definitions( -D_SCL_SECURE_NO_WARNINGS )
 if ( WIN32 )
     add_definitions( -DUSE_OS_POLICY=WindowsPolicy )
     add_definitions( -D_ENABLE_EXTENDED_ALIGNED_STORAGE )
-    #add_definitions( -DDEBUG_ )
+    add_definitions( -D_NOEXCEPT=noexcept )
 endif ( WIN32 )
 
 
