adding pool based allocator

--- a/test/regression/CMakeLists.txt
+++ b/test/regression/CMakeLists.txt
@@ -5,10 +5,11 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 
 add_executable( regression
     main.cpp
-    merged_string_view.cpp
-    path_iterator.cpp
-    rare_write_frequent_read_mutex.cpp
-    storage.cpp
+    merged_string_view
+    path_iterator
+    rare_write_frequent_read_mutex
+    unsafe_pool_based_allocator
+    storage
 )
 
 target_link_libraries(
